fixed excessive video size on mobile

--- a/project-mclora.css
+++ b/project-mclora.css
@@ -136,6 +136,22 @@ a { /* Link styles */
     flex: 1; /* Take up remaining space */
 }
 
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 66.66%; /* 3:2 aspect ratio */
+}
+
+.video-container .videoInsert {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 li .list-main {
     font-weight: bold;
 }
